--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,79 +1,62 @@
 <script>
-  var map;
-  var graphic;
-  var currLocation;
-  var watchId;
-  require([
-    "esri/map", "esri/dijit/Search", "esri/geometry/Point", "esri/graphic",
-    "esri/symbols/SimpleMarkerSymbol", "esri/symbols/SimpleLineSymbol", "esri/Color", "dojo/domReady!"
-  ], function(Map, Search, Point, Graphic,
-              SimpleMarkerSymbol, SimpleLineSymbol, Color) {
-    map = new Map("map", {
-      center: [-56.049, 38.485],
-      zoom: 3,
-      basemap: "streets"
+    var map;
+    require([
+        "esri/map", "esri/dijit/Search", "donnors/maps/Utils", "esri/geometry/webMercatorUtils", "dojo/domReady!"
+    ], function (Map, Search, Utils, webMercatorUtils) {
+        map = new Map("map", {
+            center: [-56.049, 38.485],
+            zoom: 3,
+            basemap: "streets"
+        });
+
+        var search = new Search({
+            map: map
+        }, "search");
+
+        map.on("load", function () {
+            var utils = new Utils({
+                map: map
+            });
+
+            function orientationChanged() {
+                map.reposition();
+                map.resize();
+            }
+
+            search.startup();
+
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition (
+                    function (location) {
+                        utils.zoomToLocation(location.coords.longitude, location.coords.latitude);
+                    },
+                    function(error) {
+                        utils.locationError(error)
+                    }
+                );
+
+                utils.watchId = navigator.geolocation.watchPosition(
+                    function (location) {
+                        utils.showLocation(location.coords.longitude, location.coords.latitude)
+                    },
+                    function(error) {
+                        utils.locationError(error)
+                    }
+                );
+
+            } else {
+                console.error("Geolocation Not Supported");
+            }
+
+            map.on("click", function (evt) {
+                var position = webMercatorUtils.webMercatorToGeographic(evt.mapPoint);
+                utils.updateLocation(position.x, position.y);
+
+            });
+        });
     });
-
-    var search = new Search({
-      map: map
-    }, "search");
-
-    search.startup();
-
-    if (navigator.geolocation) {
-      navigator.geolocation.getCurrentPosition(zoomToLocation, locationError);
-        watchId = navigator.geolocation.watchPosition(showLocation, locationError);
-    } else {
-        console.error("Geolocation Not Supported");
-        return false;
-    }
-
-    function locationError(error){
-      switch(error.code){
-        case error.PERMISSION_DENIED: console.error("Location not provided");
-          break;
-        case error.POSITION_UNAVAILABLE:  console.error("Current location not available");
-          break;
-        case error.TIMEOUT:  console.error("Timeout");
-          break;
-        default: alert("unknown error");
-          break;
-      }
-    }
-
-    function zoomToLocation(location) {
-      var pt = new Point(location.coords.longitude, location.coords.latitude);
-      addGraphic(pt);
-      map.centerAndZoom(pt, 15);
-    }
-
-    function showLocation(location) {
-      //zoom to the users location and add a graphic
-      var pt = new Point(location.coords.longitude, location.coords.latitude);
-      if ( !graphic ) {
-        addGraphic(pt);
-      } else { // move the graphic if it already exists
-        graphic.setGeometry(pt);
-      }
-      map.centerAt(pt);
-    }
-
-    function addGraphic(pt){
-      var symbol = new SimpleMarkerSymbol(
-              SimpleMarkerSymbol.STYLE_CIRCLE,
-              12,
-              new SimpleLineSymbol(
-                      SimpleLineSymbol.STYLE_SOLID,
-                      new Color([210, 105, 30, 0.5]),
-                      8
-              ),
-              new Color([210, 105, 30, 0.9])
-      );
-      graphic = new Graphic(pt, symbol);
-      map.graphics.add(graphic);
-    }
-  });
 </script>
 <div id="search"></div>
 <div id="map"></div>
+<div id="donnor-dialog"></div>
 
