--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,60 +1,4 @@
-<script>
-    var map;
-    require([
-        "esri/map", "esri/dijit/Search", "donnors/maps/Utils", "esri/geometry/webMercatorUtils", "dojo/domReady!"
-    ], function (Map, Search, Utils, webMercatorUtils) {
-        map = new Map("map", {
-            center: [-56.049, 38.485],
-            zoom: 3,
-            basemap: "streets"
-        });
-
-        var search = new Search({
-            map: map
-        }, "search");
-
-        map.on("load", function () {
-            var utils = new Utils({
-                map: map
-            });
-
-            function orientationChanged() {
-                map.reposition();
-                map.resize();
-            }
-
-            search.startup();
-
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition (
-                    function (location) {
-                        utils.zoomToLocation(location.coords.longitude, location.coords.latitude);
-                    },
-                    function(error) {
-                        utils.locationError(error)
-                    }
-                );
-
-                utils.watchId = navigator.geolocation.watchPosition(
-                    function (location) {
-                        utils.showLocation(location.coords.longitude, location.coords.latitude)
-                    },
-                    function(error) {
-                        utils.locationError(error)
-                    }
-                );
-
-            } else {
-                console.error("Geolocation Not Supported");
-            }
-
-            map.on("click", function (evt) {
-                var position = webMercatorUtils.webMercatorToGeographic(evt.mapPoint);
-                utils.updateLocation(position.x, position.y);
-
-            });
-        });
-    });
+<script type="text/babel" src="js/app.jsx">
 </script>
 <div id="search"></div>
 <div id="map"></div>
