--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,6 +1,6 @@
-<script type="text/babel" src="js/app.jsx">
-</script>
+<header><h3>Blood Donation Bridge</h3><small>Check your location</small></header>
 <div id="search"></div>
 <div id="map"></div>
-<div id="donnor-dialog"></div>
-
+<div id="donor-dialog"></div>
+<script type="text/babel" src="js/app.jsx"></script>
+<iframe name="ifrmprocess" id="ifrmprocess" style="display: none" src=""></iframe>
