--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,4 +1,4 @@
-<header><h3>Blood Donation Bridge</h3><small>Check your location</small></header>
+<header><h3>Blood Donation Bridge</h3><small>Click on the map to select your location</small></header>
 <div id="search"></div>
 <div id="map"></div>
 <div id="donor-dialog"></div>
