--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -38,7 +38,7 @@
     <script src="/bower_components/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     <script>
-        var base_url = "<%=sails.getBaseUrl()%>";
+        var base_url = location.protocol + "//" + location.hostname + (location.port != '80' ? ':' + location.port : "");
         var dojoConfig = {
             parseOnLoad: false,
             async: true,
