--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -36,6 +36,7 @@
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="/bower_components/jquery-validation/dist/aditional-methods.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     <script>
         var base_url = location.protocol + "//" + location.hostname + (location.port != '80' ? ':' + location.port : "");
